fix top spacing for nested lists

--- a/sass/style.sass
+++ b/sass/style.sass
@@ -121,6 +121,9 @@ ol, ul
 li + li
   padding-top: .8rem
 
+li > ul, li > ol
+  padding-top: .8rem
+
 img
   max-width: 100%
   max-height: 100vh
